--- a/src/org/cict/evaluation/retention/RetentionRowDetails.fxml
+++ b/src/org/cict/evaluation/retention/RetentionRowDetails.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="502.0" prefWidth="474.0" spacing="15.0" style="-fx-background-color: #35BA9B;" stylesheets="@../../../../update5/org/cict/student/layout/metro-ui.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="502.0" prefWidth="474.0" spacing="10.0" style="-fx-background-color: #35BA9B;" stylesheets="@../../../../update5/org/cict/student/layout/metro-ui.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox alignment="CENTER_LEFT">
          <children>
@@ -188,7 +188,7 @@
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <VBox fx:id="vbox_table_subjects" prefHeight="103.0" prefWidth="435.0" />
+                  <VBox fx:id="vbox_table_subjects" prefHeight="103.0" prefWidth="435.0" styleClass="metro-table" stylesheets="@../../../../update5/org/cict/student/layout/metro-ui-table.css" />
                </children>
                <VBox.margin>
                   <Insets right="20.0" />
@@ -199,8 +199,13 @@
             <Insets left="20.0" />
          </VBox.margin>
       </VBox>
+      <VBox alignment="CENTER">
+         <children>
+            <JFXButton fx:id="btn_reprint" prefHeight="27.0" prefWidth="227.0" style="-fx-border-color: white;" text="Reprint Retention Letter" textFill="WHITE" />
+         </children>
+      </VBox>
    </children>
    <padding>
-      <Insets bottom="20.0" left="20.0" right="10.0" top="10.0" />
+      <Insets bottom="10.0" left="20.0" right="10.0" top="10.0" />
    </padding>
 </VBox>
