added new dbase file and added retention viewer in adding

--- a/src/org/cict/evaluation/retention/RetentionDetailsSubjectRow.fxml
+++ b/src/org/cict/evaluation/retention/RetentionDetailsSubjectRow.fxml
@@ -6,44 +6,44 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<HBox alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" prefHeight="50.0" prefWidth="600.0" spacing="5.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox alignment="CENTER_LEFT">
          <children>
-            <Label fx:id="lbl_code" prefHeight="25.0" prefWidth="113.0" text="IT 303">
-               <font>
-                  <Font name="System Bold" size="16.0" />
-               </font>
-            </Label>
-            <Label text="Subject Code">
-               <font>
-                  <Font size="9.0" />
-               </font>
-            </Label>
-         </children>
-      </VBox>
-      <VBox alignment="CENTER_LEFT" HBox.hgrow="ALWAYS">
-         <children>
-            <Label fx:id="lbl_title" maxWidth="1.7976931348623157E308" prefHeight="19.0" prefWidth="256.0" text="PROFFESIONAL ETHICS">
+            <Label fx:id="lbl_code" prefHeight="1.0" prefWidth="113.0" text="IT 303">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <Label text="Descriptive Title">
+            <Label minWidth="-Infinity" text="Subject Code">
                <font>
                   <Font size="9.0" />
                </font>
             </Label>
          </children>
       </VBox>
-      <VBox alignment="CENTER_RIGHT">
+      <VBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="322.0" HBox.hgrow="ALWAYS">
          <children>
-            <Label fx:id="lbl_units" alignment="CENTER_RIGHT" prefHeight="25.0" prefWidth="54.0" text="3.0" textAlignment="RIGHT">
+            <Label fx:id="lbl_title" maxWidth="1.7976931348623157E308" prefHeight="19.0" prefWidth="329.0" text="PROFFESIONAL ETHICS">
                <font>
-                  <Font size="15.0" />
+                  <Font name="System Bold" size="9.0" />
                </font>
             </Label>
-            <Label text="Total Units">
+            <Label minWidth="-Infinity" text="Descriptive Title">
+               <font>
+                  <Font size="9.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
+      <VBox alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="108.0">
+         <children>
+            <Label fx:id="lbl_units" alignment="CENTER_RIGHT" prefHeight="0.0" prefWidth="54.0" text="3.0" textAlignment="RIGHT">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label minWidth="-Infinity" text="Total Units">
                <font>
                   <Font size="9.0" />
                </font>
